# ChangeLog for sci-visualization/fityk
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-visualization/fityk/ChangeLog,v 1.9 2010/01/06 03:15:22 bicatali Exp $

*fityk-0.9.0 (06 Jan 2010)

  06 Jan 2010; Sébastien Fabbro <bicatali@gentoo.org> fityk-0.8.9.ebuild,
  +fityk-0.9.0.ebuild:
  Version bump and removed uneeded .la files (bug #299340)

  13 Nov 2009; Sébastien Fabbro <bicatali@gentoo.org> -fityk-0.8.7.ebuild,
  -files/fityk-0.8.7-3rdparty.patch:
  Removed old

*fityk-0.8.9 (21 Sep 2009)

  21 Sep 2009; Sébastien Fabbro <bicatali@gentoo.org> -fityk-0.8.6.ebuild,
  -files/fityk-0.8.6-3rdparty.patch, +fityk-0.8.9.ebuild:
  Version bump

  25 Jun 2009; Sébastien Fabbro <bicatali@gentoo.org> fityk-0.8.7.ebuild:
  Fixed for older libtool version, thanks polynomial-c, closing bug #275290

*fityk-0.8.7 (22 Jun 2009)

  22 Jun 2009; Sébastien Fabbro <bicatali@gentoo.org> +fityk-0.8.7.ebuild,
  +files/fityk-0.8.7-3rdparty.patch:
  Version bump, thanks Michelangelo Scopelliti bug #274683

  22 Aug 2008; Sébastien Fabbro <bicatali@gentoo.org>
  -files/fityk-0.8.4-as-needed.patch, +files/fityk-0.8.6-3rdparty.patch,
  -fityk-0.8.4.ebuild, fityk-0.8.6.ebuild:
  Removed building of xylib, closing bug #235289

  13 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org> fityk-0.8.6.ebuild:
  Use internal boost headers for incompatibily between boost::spirit
  versions. Thanks Michelangelo Scopelliti, closing bug #231177.

*fityk-0.8.6 (18 Apr 2008)

  18 Apr 2008; Sébastien Fabbro <bicatali@gentoo.org> +fityk-0.8.6.ebuild:
  Version bump. Removed python flag (upstream recommandation)

*fityk-0.8.4 (28 Feb 2008)

  28 Feb 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/fityk-0.8.4-as-needed.patch, +metadata.xml, +fityk-0.8.4.ebuild:
  Initial import. Thanks Honza Macháček and Michelangelo Scopelliti for
  their work. Closing bug #126810.
