@@ -1,6 +1,11 @@
 # ChangeLog for sci-visualization/fityk
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/fityk/ChangeLog,v 1.9 2010/01/06 03:15:22 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/fityk/ChangeLog,v 1.10 2010/04/12 17:05:45 bicatali Exp $
+
+*fityk-0.9.1 (12 Apr 2010)
+
+  12 Apr 2010; Sébastien Fabbro <bicatali@gentoo.org> +fityk-0.9.1.ebuild:
+  Version bump
 
 *fityk-0.9.0 (06 Jan 2010)
 
